--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <main>
         <a href="kidsread.html">Kids Read For Fun</a>
+        <a href="flexbox/index.html">Flexbox</a>
     </main>
     <footer>
         <p>&copy 2024 Jenna McHargue</p>
